# mcp-vidu

./: .gitignore  README.md
example/: .env.example  README.md  pyproject.toml
example/src/vidu_examples/: get_generation.py  img2video.py
